Add error handling for create parcel

--- a/app/scanner/webapp/view/Overview.view.xml
+++ b/app/scanner/webapp/view/Overview.view.xml
@@ -16,6 +16,9 @@
                         width="auto"
                         items="{
                             path: '/Parcels',
+                            parameters: {
+                                $$updateGroupId : 'parcels'
+                            },
                             sorter: [{
                                 path: 'scanDateTime', 
                                 descending: true                                    
